[package]
name = "silent_shooter"
version = "0.1.0"
authors = ["karl.runge <karl.runge@defendtex.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst =      "0.15.3"
tiled =         "0.9.3"
time =          "0.2.24"


[features]
default = ["vulkan"]
vulkan = ["amethyst/vulkan"]
